--- a/html/accueil.html
+++ b/html/accueil.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-            <h1 class="header">le nom de mon site</h1>
+            <h1 class="header">le nom de mon site web</h1>
             <p class="header">le slogan de mon site</p>
         </div>
         <div class="search-bar-wrapper">
