--- a/html/accueil.html
+++ b/html/accueil.html
@@ -28,11 +28,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="">Accueil</a></li>
-            <li><a href="">A propos</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Partenaires</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="">Accueil mon Accueil</a></li>
+            <li><a href="">A propos mes propos</a></li>
+            <li><a href="">Portfolio mon Portfolio</a></li>
+            <li><a href="">Partenaires mes Partenaires</a></li>
+            <li><a href="">Contact mes Contact</a></li>
         </ul>
     </nav>
 
